# askfm_project

./: .gitignore  CMakeLists.txt  askfm.db  askfm_project.md
src/: askfm.cpp
src/database/: database.cpp  database.h
src/question/: questions.cpp  questions.h
src/user/: user.cpp  user.h
